[package]
name = "bad3d"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
license = "MIT"
edition = "2018"

[dependencies]
more-asserts = "0.2"
log = "0.4"

[dev-dependencies]
rand = "0.4"
glium = "0.25.0"
failure = "0.1"
imgui = { git = "https://github.com/thomcc/imgui-rs", branch = "update-glium-0.25" }
imgui-glium-renderer = { git = "https://github.com/thomcc/imgui-rs", branch = "update-glium-0.25" }
env_logger = "0.6.1"
