[package]
name = "bad3d"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
handy = "0.1.3"
chek = "0.1.0"
almost = "0.2.0"
cfg-if = "0.1.9"
smallvec = "0.6.10"
smallbitvec = "2.4.0"
t3m = {path = "./t3m"}

[dev-dependencies]
rand = "0.6"
glium = "0.25.1"
failure = "0.1"
imgui = "0.1.0"
#{ git = "https://github.com/thomcc/imgui-rs", branch = "update-glium-0.25" }
imgui-glium-renderer = "0.1.0"
imgui-winit-support = "0.1.0"
#{ git = "https://github.com/thomcc/imgui-rs", branch = "update-glium-0.25" }
env_logger = { version = "0.6.2", default_features = false, features = ["termcolor", "atty"] }
mimallocator = "0.1.3"
quickcheck = "0.8.5"

[profile.release]
debug = true
# lto = "thin"
debug-assertions = true
# [profile.dev]
# opt-level = 2

[workspace]
members = [
    ".",
    "t3m"
]
